Remove nonce as it's now packaged with the ciphertext
